cinder/cinder/templates/deployment-api.yaml
---
# Source: cinder/templates/deployment-api.yaml


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cinder-api
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
  labels:
    release_group: release-name
    application: cinder
    component: api
spec:
  replicas: 2
  selector:
    matchLabels:
      release_group: release-name
      application: cinder
      component: api
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        release_group: release-name
        application: cinder
        component: api
      annotations:
        "openstackhelm.openstack.org/release_uuid": ""
        configmap-bin-hash: "eea5487187ba8d3e0742920c849296c569e37aa8316fd7e9214111cdeceea3aa"
        configmap-etc-hash: "4bcb7941fa79e0f705087017b19a9f1b9f12b690727239dd6179361f441560e3"
        
    spec:
      serviceAccountName: cinder-api
      securityContext:
        runAsUser: 42424
        
      affinity:
        
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: release_group
                    operator: In
                    values:
                    - release-name
                  - key: application
                    operator: In
                    values:
                    - cinder
                  - key: component
                    operator: In
                    values:
                    - api
                  
              topologyKey: kubernetes.io/hostname
            weight: 10
      nodeSelector:
        openstack-control-plane: enabled
      terminationGracePeriodSeconds: 30
      containers:
        - name: cinder-api
          image: "docker.io/openstackhelm/cinder:stein-ubuntu_bionic"
          imagePullPolicy: IfNotPresent
          
          
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            
          command:
            - /tmp/cinder-api.sh
            - start
          lifecycle:
            preStop:
              exec:
                command:
                  - /tmp/cinder-api.sh
                  - stop
          ports:
            - name: c-api
              containerPort: 8776
          readinessProbe:
            tcpSocket:
              port: 8776
          livenessProbe:
            tcpSocket:
              port: 8776
            initialDelaySeconds: 30
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: cinder-bin
              mountPath: /tmp/cinder-api.sh
              subPath: cinder-api.sh
              readOnly: true
            - name: cinder-etc
              mountPath: /etc/cinder/cinder.conf
              subPath: cinder.conf
              readOnly: true
            - name: cinder-etc
              mountPath: /etc/cinder/logging.conf
              subPath: logging.conf
              readOnly: true
            - name: cinder-etc
              mountPath: /etc/cinder/api-paste.ini
              subPath: api-paste.ini
              readOnly: true
            - name: cinder-etc
              mountPath: /etc/cinder/policy.yaml
              subPath: policy.yaml
              readOnly: true
            - name: cinder-etc
              mountPath: /etc/cinder/api_audit_map.conf
              subPath: api_audit_map.conf
              readOnly: true
            - name: cinder-etc
              mountPath: /etc/cinder/resource_filters.json
              subPath: resource_filters.json
              readOnly: true
            - name: cinder-coordination
              mountPath: /var/lib/cinder/coordination

      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: cinder-bin
          configMap:
            name: cinder-bin
            defaultMode: 0555
        - name: cinder-etc
          secret:
            secretName: cinder-etc
            defaultMode: 0444
        #NOTE (portdirect): this will need to be set to a shared mount amongst all cinder
        # pods for the coordination backend to be fully functional.
        - name: cinder-coordination
          emptyDir: {}
