cinder/cinder/templates/deployment-scheduler.yaml
---
# Source: cinder/templates/deployment-scheduler.yaml


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cinder-scheduler
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
  labels:
    release_group: release-name
    application: cinder
    component: scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      release_group: release-name
      application: cinder
      component: scheduler
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        release_group: release-name
        application: cinder
        component: scheduler
      annotations:
        "openstackhelm.openstack.org/release_uuid": ""
        configmap-bin-hash: "eea5487187ba8d3e0742920c849296c569e37aa8316fd7e9214111cdeceea3aa"
        configmap-etc-hash: "4bcb7941fa79e0f705087017b19a9f1b9f12b690727239dd6179361f441560e3"
        
    spec:
      serviceAccountName: cinder-scheduler
      securityContext:
        runAsUser: 42424
        
      affinity:
        
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: release_group
                    operator: In
                    values:
                    - release-name
                  - key: application
                    operator: In
                    values:
                    - cinder
                  - key: component
                    operator: In
                    values:
                    - scheduler
                  
              topologyKey: kubernetes.io/hostname
            weight: 10
      nodeSelector:
        openstack-control-plane: enabled
      containers:
        - name: cinder-scheduler
          image: "docker.io/openstackhelm/cinder:stein-ubuntu_bionic"
          imagePullPolicy: IfNotPresent
          
          
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            
          command:
            - /tmp/cinder-scheduler.sh
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: cinder-bin
              mountPath: /tmp/cinder-scheduler.sh
              subPath: cinder-scheduler.sh
              readOnly: true
            - name: cinder-etc
              mountPath: /etc/cinder/cinder.conf
              subPath: cinder.conf
              readOnly: true
            - name: cinder-etc
              mountPath: /etc/cinder/logging.conf
              subPath: logging.conf
              readOnly: true
            - name: cinder-etc
              mountPath: /etc/cinder/api-paste.ini
              subPath: api-paste.ini
              readOnly: true
            - name: cinder-etc
              mountPath: /etc/cinder/policy.yaml
              subPath: policy.yaml
              readOnly: true
            - name: cinder-coordination
              mountPath: /var/lib/cinder/coordination

      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: cinder-bin
          configMap:
            name: cinder-bin
            defaultMode: 0555
        - name: cinder-etc
          secret:
            secretName: cinder-etc
            defaultMode: 0444
        #NOTE (portdirect): this will need to be set to a shared mount amongst all cinder
        # pods for the coordination backend to be fully functional.
        - name: cinder-coordination
          emptyDir: {}
