cinder/cinder/templates/deployment-volume.yaml
---
# Source: cinder/templates/deployment-volume.yaml


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cinder-volume
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
  labels:
    release_group: release-name
    application: cinder
    component: volume
spec:
  replicas: 1
  selector:
    matchLabels:
      release_group: release-name
      application: cinder
      component: volume
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        release_group: release-name
        application: cinder
        component: volume
      annotations:
        "openstackhelm.openstack.org/release_uuid": ""
        configmap-bin-hash: "eea5487187ba8d3e0742920c849296c569e37aa8316fd7e9214111cdeceea3aa"
        configmap-etc-hash: "4bcb7941fa79e0f705087017b19a9f1b9f12b690727239dd6179361f441560e3"
        
    spec:
      serviceAccountName: cinder-volume
      securityContext:
        runAsUser: 42424
        
      affinity:
        
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: release_group
                    operator: In
                    values:
                    - release-name
                  - key: application
                    operator: In
                    values:
                    - cinder
                  - key: component
                    operator: In
                    values:
                    - volume
                  
              topologyKey: kubernetes.io/hostname
            weight: 10
      nodeSelector:
        openstack-control-plane: enabled
      containers:
        - name: cinder-volume
          image: "docker.io/openstackhelm/cinder:stein-ubuntu_bionic"
          imagePullPolicy: IfNotPresent
          
          
          securityContext:
            readOnlyRootFilesystem: true
            
          command:
            - /tmp/cinder-volume.sh
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: cinder-bin
              mountPath: /tmp/cinder-volume.sh
              subPath: cinder-volume.sh
              readOnly: true
            - name: pod-shared
              mountPath: /tmp/pod-shared
            - name: cinder-conversion
              mountPath: /var/lib/cinder/conversion
            - name: cinder-etc
              mountPath: /etc/cinder/cinder.conf
              subPath: cinder.conf
              readOnly: true
            - name: cinder-etc
              mountPath: /etc/cinder/logging.conf
              subPath: logging.conf
              readOnly: true
            - name: cinder-etc
              mountPath: /etc/cinder/conf/backends.conf
              subPath: backends.conf
              readOnly: true
            - name: etcceph
              mountPath: /etc/ceph
            - name: ceph-etc
              mountPath: /etc/ceph/ceph.conf
              subPath: ceph.conf
              readOnly: true
            - name: ceph-keyring
              mountPath: /tmp/client-keyring
              subPath: key
              readOnly: true
            - name: cinder-coordination
              mountPath: /var/lib/cinder/coordination
            - name: cinder-etc
              # NOTE (Portdirect): We mount here to override Kollas
              # custom sudoers file when using Kolla images, this
              # location will also work fine for other images.
              mountPath: /etc/sudoers.d/kolla_cinder_sudoers
              subPath: cinder_sudoers
              readOnly: true
            - name: cinder-etc
              mountPath: /etc/sudoers.d/kolla_cinder_volume_sudoers
              subPath: cinder_sudoers
              readOnly: true
            - name: cinder-etc
              mountPath: /etc/cinder/rootwrap.conf
              subPath: rootwrap.conf
              readOnly: true
            - name: cinder-etc
              mountPath: /etc/cinder/rootwrap.d/volume.filters
              subPath: volume.filters
              readOnly: true

      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: cinder-bin
          configMap:
            name: cinder-bin
            defaultMode: 0555
        - name: cinder-etc
          secret:
            secretName: cinder-etc
            defaultMode: 0444
        - name: etcceph
          emptyDir: {}
        - name: pod-shared
          emptyDir: {}
        - name: cinder-conversion
          emptyDir: {}
        - name: ceph-etc
          configMap:
            name: ceph-etc
            defaultMode: 0444
        - name: ceph-keyring
          secret:
            secretName: "cinder-volume-rbd-keyring"
        
        #NOTE (portdirect): this will need to be set to a shared mount amongst all cinder
        # pods for the coordination backend to be fully functional.
        - name: cinder-coordination
          emptyDir: {}
